# SLC

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture_specification.md  audit_charter.md  module_specification_geometry_and_grid.md  overview.md  theory_manual.md
docs/guide/: 00_reading_guide.md  01_life_of_a_solve.md  (+2 more)
slcflow/: _namespace.py  errors.py  types.py
tests/: conftest.py  test_ainley.py  test_ainley_reference.py  test_assembly.py  test_backpressure.py  test_centrifugal_loss.py  test_centrifugal_loss_reference.py  test_cetin_correction.py  test_closure_wiring.py  test_continuation.py  test_conversions_reference.py  test_drivers_classical.py  test_drivers_tier3.py  test_fluid_closures_adjudication.py  test_fluid_conformance.py  test_grid.py  test_grid_adjudication.py  test_inblade.py  test_kacker_okapuu.py  test_kacker_okapuu_reference.py  test_lieblein.py  test_lieblein_loss.py  test_lieblein_loss_reference.py  test_lieblein_reference.py  test_lieblein_sp36_charts.py  test_lieblein_tr1368_fig107.py  test_lint_tools.py  test_loss_conversions.py  test_mixing.py  test_multistage_mixing.py  test_newton.py  test_parasitic_reference.py  test_perfectgas.py  test_smoothmath.py  test_supersonic.py  test_throat_capacity.py  test_transport.py  test_v1_analytic_ree.py  test_v2_curved_annulus.py  test_v3_tier_consistency.py  (+13 more)
tools/: calibrate_wilkinson.py  check_ad6.py  check_imports.py  digitize_am_fig4.py  digitize_ko82_fig14.py  digitize_lieblein_loss.py  digitize_sp36.py  digitize_tr1368_fig107.py  eckardt_anchor.py
(+76 files in other folders)
