[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "slc"
version = "0.0.0"
description = "Reduced-order streamline-curvature throughflow solver for turbomachinery"
requires-python = ">=3.14"
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
test = ["pytest>=7"]  # hypothesis: recorded upgrade path (ARCH-7)

[tool.setuptools.packages.find]
include = ["slcflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]